asg/tests/pass/circuits/inline.leo
circuit Foo {
    x: u32
}

function main() {
    const a = Foo { x: 1u32 };
}