asg/tests/fail/structs/inline_fail.leo
struct Foo {
    x: u32;
}

function main() {
    const a = Foo { y: 0u32 };
}